--- a/tetum.html
+++ b/tetum.html
@@ -336,13 +336,13 @@
     <main class="app-shell">
       <header class="app-header">
         <div class="header-top">
-          <h1 class="header-title">Species Database</h1>
+          <h1 class="header-title">Baze-dadus Espésie sira</h1>
           <button class="lang-btn">EN</button>
         </div>
 
         <div class="search-bar">
           <span class="search-icon">🔍</span>
-          <input type="text" placeholder="Search species" />
+          <input type="text" placeholder="Buka espésie sira" />
         </div>
       </header>
 
@@ -352,16 +352,16 @@
           <button class="filter-button" data-filter="all">All</button>
           <button class="filter-button" data-filter="a-z">A-Z</button>
           <button class="filter-button" data-filter="scientific-name">
-            Scientific Name
+            Naran Sientífiku
           </button>
           <button class="filter-button" data-filter="leaf-type">
-            Leaf Type
+            Tipu Daun
           </button>
           <button class="filter-button" data-filter="fruit-type">
-            Fruit Type
+            Tipu Ai-fuan
           </button>
           <button class="filter-button" data-filter="common-name">
-            Common Name
+            Naran Komún
           </button>
         </div>
       </div>
