--- a/home.html
+++ b/home.html
@@ -231,53 +231,152 @@
         /* -------------------------
            LANGUAGE OVERLAY
         -------------------------*/
+
         .lang-overlay {
             position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0,0,0,0.6);
+            inset: 0;
+            background: rgba(0, 0, 0, 0.6);
             display: none;
             justify-content: center;
             align-items: center;
             z-index: 9999;
+            padding: 16px;
         }
 
         .lang-modal {
             background: #ffffff;
-            padding: 2rem;
-            border-radius: 16px;
-            width: 80%;
-            max-width: 320px;
-            text-align: center;
+            width: 100%;
+            max-width: 460px;
+            border-radius: 22px;
+            box-shadow: 0 18px 50px rgba(0, 0, 0, .35);
+            padding: 18px 18px 16px;
             position: relative;
         }
 
-        .lang-choice {
-            padding: 1rem 2rem;
-            width: 100%;
-            margin-bottom: 1rem;
-            font-size: 1.3rem;
-            font-weight: bold;
-            background: #0B5C37;
-            color: white;
-            border: none;
-            border-radius: 12px;
-            cursor: pointer;
+        .lang-title {
+            font-size: 2rem;
+            font-weight: 800;
+            color: #0f1625;
+            margin: 10px 0 14px;
         }
 
-        .close-overlay {
-            position: absolute;
-            top: 8px;
-            right: 12px;
-            background: #ff4d4d;
-            border: none;
-            color: white;
-            font-size: 1.2rem;
-            padding: 0.4rem 0.6rem;
-            border-radius: 6px;
+        .selected-pill {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            padding: 14px 16px;
+            border-radius: 999px;
+            border: 2px solid #d8dbe2;
+            background: #ffffff;
+            box-shadow: 0 10px 22px rgba(0, 0, 0, .12);
+        }
+
+        .flag {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            display: grid;
+            place-items: center;
+            background: rgba(0, 0, 0, .06);
+            box-shadow: 0 6px 14px rgba(0, 0, 0, .10);
+            flex: 0 0 auto;
+            font-size: 20px;
+        }
+
+        .selected-name {
+            flex: 1;
+            font-weight: 900;
+            letter-spacing: .06em;
+            font-size: 15px;
+            color: #0f1625;
+            text-transform: uppercase;
+        }
+
+        .check-dot {
+            width: 42px;
+            height: 42px;
+            border-radius: 50%;
+            background: #27c861;
+            display: grid;
+            place-items: center;
+            box-shadow: 0 10px 18px rgba(39, 200, 97, .25);
+            flex: 0 0 auto;
+        }
+
+        .check-dot svg {
+            width: 18px;
+            height: 18px;
+            fill: #fff;
+        }
+
+        .card {
+            margin-top: 10px;
+            border-radius: 22px;
+            overflow: hidden;
+            border: 2px solid #d8dbe2;
+            background: #ffffff;
+            box-shadow: 0 10px 22px rgba(0, 0, 0, .10);
+        }
+
+        .list {
+            background: #ffffff;
+        }
+
+        .row {
+            display: flex;
+            align-items: center;
+            gap: 14px;
+            padding: 18px 14px;
+            font-size: 18px;
+            font-weight: 800;
+            border-bottom: 1px solid #eef1f6;
             cursor: pointer;
+            user-select: none;
+            color: #0f1625;
+            transition: background .15s ease, transform .05s ease;
+        }
+
+        .row:active {
+            transform: scale(0.995);
+        }
+
+        .row:last-child {
+            border-bottom: none;
+        }
+
+        .row .name {
+            flex: 1;
+        }
+
+        .radio {
+            width: 34px;
+            height: 34px;
+            border-radius: 50%;
+            border: 3px solid #cfd5e2;
+            display: grid;
+            place-items: center;
+            flex: 0 0 auto;
+        }
+
+        .radio svg {
+            width: 16px;
+            height: 16px;
+            fill: #fff;
+            display: none;
+        }
+
+        .row.selected {
+            background: rgba(39, 200, 97, .10);
+        }
+
+        .row.selected .radio {
+            border-color: transparent;
+            background: #27c861;
+            box-shadow: 0 10px 18px rgba(39, 200, 97, .22);
+        }
+
+        .row.selected .radio svg {
+            display: block;
         }
 
         /* -------------------------
@@ -391,13 +490,53 @@
     <div class="debug" id="debugInfo"></div>
 
     <!-- LANGUAGE OVERLAY -->
-    <div class="lang-overlay" id="langOverlay">
-        <div class="lang-modal">
-            <button class="close-overlay" id="closeOverlay">✖</button>
-            <button class="lang-choice" id="chooseEn">English</button>
-            <button class="lang-choice" id="chooseTet">Tetum</button>
+        <!-- LANGUAGE OVERLAY -->
+
+        <div class="lang-overlay" id="langOverlay">
+            <div class="lang-modal" role="dialog" aria-modal="true" aria-label="Choose language">
+                <button class="close-overlay" id="closeOverlay" aria-label="Close">✖</button>
+
+                <div class="lang-title">You Selected</div>
+
+                <div class="selected-pill" id="selectedPill">
+                    <div class="flag" id="selectedFlag" aria-hidden="true">🇦🇺</div>
+                    <div class="selected-name" id="selectedName">ENGLISH AU</div>
+                    <div class="check-dot" aria-hidden="true">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M9.2 16.6 4.9 12.3l1.4-1.4 2.9 2.9 8-8 1.4 1.4-9.4 9.4z" />
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="lang-title" style="margin-top:18px;">All Languages</div>
+
+                <section class="card" aria-label="Language list">
+                    <div class="list" id="langList" role="listbox" aria-label="Languages">
+                        <div class="row selected" role="option" aria-selected="true" data-code="EN"
+                            data-name="ENGLISH AU" data-flag="🇦🇺">
+                            <div class="flag" aria-hidden="true">🇦🇺</div>
+                            <div class="name">ENGLISH AU</div>
+                            <div class="radio" aria-hidden="true">
+                                <svg viewBox="0 0 24 24">
+                                    <path d="M9.2 16.6 4.9 12.3l1.4-1.4 2.9 2.9 8-8 1.4 1.4-9.4 9.4z" />
+                                </svg>
+                            </div>
+                        </div>
+
+                        <div class="row" role="option" aria-selected="false" data-code="TET" data-name="Tetum"
+                            data-flag="🇹🇱">
+                            <div class="flag" aria-hidden="true">🇹🇱</div>
+                            <div class="name">Tetum</div>
+                            <div class="radio" aria-hidden="true">
+                                <svg viewBox="0 0 24 24">
+                                    <path d="M9.2 16.6 4.9 12.3l1.4-1.4 2.9 2.9 8-8 1.4 1.4-9.4 9.4z" />
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
-    </div>
 
     <!-- FILTER OVERLAY (NEW) -->
     <div class="filter-overlay" id="filterOverlay">
@@ -413,44 +552,34 @@
 
 <script>
 // LANGUAGE HANDLER
-let lang = "en";
-
-try {
-    const stored = localStorage.getItem("appLanguage");
-    if (stored === "en" || stored === "tet") {
-        lang = stored;
-    }
-} catch (e) {
-    console.warn("Could not access localStorage:", e);
-}
-
-const langBtn = document.querySelector(".lang-btn");
-langBtn.textContent = lang === "en" ? "EN" : "TET";
-
-const overlay = document.getElementById("langOverlay");
-const closeBtn = document.getElementById("closeOverlay");
-const chooseEn = document.getElementById("chooseEn");
-const chooseTet = document.getElementById("chooseTet");
-
-langBtn.addEventListener("click", () => {
-    overlay.style.display = "flex";
-});
-
-closeBtn.addEventListener("click", () => {
-    overlay.style.display = "none";
-});
-
-chooseEn.addEventListener("click", () => {
-    localStorage.setItem("appLanguage", "en");
-    langBtn.textContent = "EN";
-    overlay.style.display = "none";
-});
-
-chooseTet.addEventListener("click", () => {
-    localStorage.setItem("appLanguage", "tet");
-    langBtn.textContent = "TET";
-    overlay.style.display = "none";
-});
+        const langBtn = document.querySelector(".lang-btn");
+        const overlay = document.getElementById("langOverlay");
+        const closeBtn = document.getElementById("closeOverlay");
+        const selectedNameEl = document.getElementById("selectedName");
+        const selectedFlagEl = document.getElementById("selectedFlag");
+        langBtn.addEventListener("click", () => {
+            overlay.style.display = "flex";
+        });
+        closeBtn.addEventListener("click", () => {
+            overlay.style.display = "none";
+        });
+        overlay.addEventListener("click", (e) => {
+            if (e.target === overlay) overlay.style.display = "none";
+        });
+        document.querySelectorAll("#langList .row").forEach((row) => {
+            row.addEventListener("click", () => {
+                document.querySelectorAll("#langList .row").forEach(r => {
+                    r.classList.remove("selected");
+                    r.setAttribute("aria-selected", "false");
+                });
+                row.classList.add("selected");
+                row.setAttribute("aria-selected", "true");
+                selectedNameEl.textContent = row.dataset.name;
+                selectedFlagEl.textContent = row.dataset.flag;
+                langBtn.textContent = row.dataset.code;
+                overlay.style.display = "none";
+            });
+        });
 
 
 // ------------------------------
