Added script js and css to pages

--- a/specie.html
+++ b/specie.html
@@ -8,6 +8,9 @@
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#8DC63F">
 
+        <!-- Online Banner-->
+    <link rel="stylesheet" href="css/onlineBanner.css">
+
     <style>
         body {
             margin: 0;
@@ -94,6 +97,7 @@
 </head>
 
 <body>
+    <main class="app-shell">
     <div class="container">
         <img id="plant-image" class="plant-img" src="" alt="Image">
 
@@ -139,9 +143,11 @@
 
         <a href="home.html" class="back-btn">← Back to List</a>
     </div>
+    </main>
 
     <script src="scripts/specieslist.js"></script>
     <script src="scripts/imageCache.js"></script>
+    <script src="scripts/detectOnline.js" defer></script>
     <script>
 
         const params = new URLSearchParams(window.location.search);
