fix supabase link issues

--- a/Frontend/login-admin.html
+++ b/Frontend/login-admin.html
@@ -18,6 +18,9 @@
         Identify plant species instantly using your smartphone.
         Scan, explore and save your favourite discoveries.
       </div>
+      <button class="btn" id="googleBtn">
+        Sign Up With Google
+      </button>
       <button class="btn" id="guestBtn">
         Continue as Guest
       </button>
@@ -27,19 +30,17 @@
       </div>
 
       <div class="email-group">
-        <label class="email-label">Username</label>
-        <input type="tetx" class="email-input" placeholder="" id="usernameInput" required />
-        <label class="email-label">Password</label>
-
-        <input type="password" class="email-input" id="passwordInput" required />
+        <label class="email-label">Email</label>
+        <input type="email" class="email-input" placeholder="" required />
         <button class="btn email-btn" id="emailContinueBtn">
-          Sign in
+          Continue with Email
         </button>
       </div>
 
+
       <div class="footer">
-        Admin?
-        <a href="login-admin.html">Go to admin login</a>
+        Already have an account?
+        <a href="#" id="signInLink">Sign In</a>
       </div>
     </div>
   </div>
