Update tetum.html - added search icon

--- a/Frontend/tetum.html
+++ b/Frontend/tetum.html
@@ -24,7 +24,9 @@
         </div>
 
         <div class="search-bar">
-          <span class="search-icon">🔍</span>
+          <span class="search-icon">
+            <img src="./Assets/icons/search.svg" alt="Search" />
+          </span>
           <input type="text" placeholder="Buka espésie sira" />
         </div>
       </header>
