--- a/Frontend/home.html
+++ b/Frontend/home.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/responsive.css" />
     <link rel="stylesheet" href="css/filters.css" />
     <link rel="stylesheet" href="css/cards.css" />
+    <link rel="stylesheet" href="css/onlineBanner.css" />
   </head>
   <body>
     <main class="app-shell">
