--- a/Frontend/tetum.html
+++ b/Frontend/tetum.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/filters.css" />
     <link rel="stylesheet" href="css/cards.css" />
     <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="css/onlineBanner.css" />
   </head>
   <body>
     <main class="app-shell">
@@ -53,6 +54,7 @@
       <script src="scripts/sync.js"></script>
       <script src="scripts/specieslist.js"></script>
       <script src="scripts/filterCarousel.js"></script>
+      <script src="scripts/detectOnline.js" defer></script>
       <script src="scripts/sw-register.js"></script>
 
       <a class="back-link" href="index.html"></a>
