--- a/Frontend/video.html
+++ b/Frontend/video.html
@@ -122,6 +122,9 @@
             color: #475569;
         }
     </style>
+
+    <link rel="stylesheet" href="css/onlineBanner.css" />
+
 </head>
 <body>
 
@@ -134,12 +137,23 @@
 
     <!-- Video Preview -->
     <div class="video-container" id="videoContainer">
+        <!--
         <img
             src="./Assets/Images/video-thumbnail-placeholder.jpg"
             alt="Video thumbnail"
             class="video-thumbnail"
             id="videoThumbnail"
         />
+        -->
+        
+        <video
+            id="videoPreview"
+            class="video-thumbnail"
+            muted
+            playsinline
+            preload="auto"
+        ></video>
+
         <div class="play-overlay" id="playOverlay">▶</div>
     </div>
 
@@ -160,6 +174,7 @@
 
 <script src="scripts/video.js"></script>
 <script src="scripts/sw-register.js"></script>
+<script src="scripts/detectOnline.js" defer></script>
 
 </body>
 </html>
